<resources>
    <string name="app_name">SafeAko</string>
    <string name="previous">PREVIOUS</string>
    <string name="skip">SKIP</string>

    //viewpager header
    <string name="h1">Be Aware</string>
    <string name="h2">Quickly Access</string>
    <string name="h3">Self-Assessment</string>

    //viewpager description
    <string name="desc1">The application will provide animated videos about STIs.</string>
    <string name="desc2">The application provides direct contacts to guidance counselor, testing centers admins, and medical doctors.</string>
    <string name="desc3">Use the application to seek information if you need a medical or psychological advice.</string>


    //welcome login strings
    <string name="login_text">Log in</string>
    <string name="create_account_text">Create Account</string>
    <string name="welcome_login">Welcome to SafeAko</string>
    <string name="welcome_login_desc">SafeAko is a mobile app for STI awareness, featuring self-assessment, testing guidance, and counseling support.</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me!</string>
    <string name="sign_up">Sign Up</string>
    <string name="agreement">I have read and agree to the terms of the User Agreement</string>
    <string name="verify">Verify</string>
    <string name="otp_will_expired_in_00_00">Otp will expired in 00:00</string>
    <string name="otp_code">OTP Code</string>
    <string name="register">Register</string>
    <string name="submit">Submit OTP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="topics">Topics</string>
    <string name="stis_definition">STDs Definition</string>
    <string name="prevention_methods">Prevention Methods</string>
    <string name="testing_and_medication">Testing and Medication</string>
    <string name="contact_facilities">Contact Facilities</string>
    <string name="messages">Message Center</string>
    <string name="display_username">RHU Magsaysay</string>
    <string name="display_message">Thank you for trusting us! Now may I know your .......</string>
    <string name="display_date">June 3, 2024</string>
    <string name="enter_message">Write message here...</string>
    <string name="no_messages">No Messages</string>
    <string name="chat_list">Chat List</string>
    <string name="update_profile">Update Profile</string>
    <string name="save">Save</string>
    <string name="full_name">Full Name</string>
    <string name="display_name">Display Name</string>
    <string name="occupation">Occupation</string>
    <string name="email_address">Email Address</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="note_for_avatar">You can select any avatar you want.</string>
    <string name="select">Select Avatar</string>
    <string name="admin_list">Admin List</string>
    <string name="no_admins">No Admins</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="view_all">View All</string>
    <string name="assessment">Assessment</string>
    <string name="number_zero">0</string>
    <string name="counseling">Counseling</string>
    <string name="testing">Testing</string>
    <string name="just_for_you">Just for you!</string>
    <string name="self_assessment">Self Assessment</string>
    <string name="why_are_you_interested_in_sti_risk_assessment">Why are you interested in STI risk assessment?</string>
    <string name="question">question</string>
    <string name="info">\"Sex\" includes oral, vaginal, or anal sex, and a sexual partner is somebody with whom you have oral, vaginal, or anal sex.</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="municipality">Select Municipality</string>
    <string name="testing_and_prevention_method">Testing and Prevention Method</string>
    <string name="impact_and_awareness">Impact and Awareness</string>
    <string name="developers">Developers</string>
    <string name="self_assessment_result">Self Assessment Result</string>
    <string name="attention_user">Attention, User</string>
    <string name="you_can_contact_this_facility_admin_to_your_confirm_appointment">You can contact this facility admin to your confirm appointment.</string>
    <string name="request_an_schedule_update">Request an Schedule Update</string>
    <string name="user_guide">User Guide</string>
    <string name="how_to_change_password">How to change Password?</string>
    <string name="how_password">1. Tap User Profile\n2. Click Profile Setting \n3. Tap change password \n4. Then fill up the form \n5. Click “Save”</string>
    <string name="how_to_change_phone_number">How to change Phone Number?</string>
    <string name="change_phone">1. Tap User Profile\n2. Click Profile Setting\n3. Tap change phone number\n4. Then fill up the form\n5. Click “Save”</string>
    <string name="how_to_change_avatar_and_nickname">How to change Avatar and Nickname?</string>
    <string name="change_nickname">1. Tap User Profile\n2. Click Profile Setting\n3. Tap change “Avatar and Nickname”\n4. Then fill up the form\n5. Click “Save”</string>
    <string name="how_to_get_counseling_and_testing_schedule">How to get counseling and testing schedule?</string>
    <string name="counseling_testing_info">1. Pre- Assessment button. Place at the middle of inner pane.\n2. Check the button for your answer and answer it correctly.\n3. Then click submit\n4. Then wait for the evaluation and schedule given by Health Facilitator</string>
    <string name="acknowledgement">Acknowledgement</string>
    <string name="main">Main</string>
    <string name="summary_of_reports">Summary Of Reports</string>
    <string name="message">Message</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="gender">Gender</string>
    <string name="relationship">Relationship</string>
    <string name="stds_assessment_form">STDs Assessment Form</string>
    <string name="assessment_info">All information given will be STRICTLY CONFIDENTIAL. Please fill out this form COMPLETELY and as honestly as possible. Please CHECK the appropriate boxes.</string>
    <string name="did_your_birth_mother_have_hiv_when_you_were_born">Did your birth mother have HIV when you were born?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="male">Male:</string>
    <string name="female">Female:</string>
    <string name="sexual1">Sex with a male/female with no condom</string>
    <string name="sexual2">Sex with someone whom you know has HIV</string>
    <string name="paying_for_sex">Paying for sex</string>
    <string name="injected_drugs_without_doctor_s_advice">Injected drugs without doctor\'s advice</string>
    <string name="sexual5">Received blood transfusion</string>
    <string name="sexual6">Occupational exposure (needlestick/sharps)</string>
    <string name="sexual7">Gotten a tattoo</string>
    <string name="reason">Reason for submitting pre-assessment for counseling and testing</string>
    <string name="medical_history">Medical History</string>
    <string name="change_staff_password">Change Staff Password?</string>

</resources>