<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:paddingVertical="20dp"
    android:paddingHorizontal="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.activity.guide.UserGuide">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/arrow_back"
            app:tint="@color/_dark"
            android:background="@android:color/transparent"
            android:id="@+id/btn_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/user_guide"
            android:fontFamily="@font/comfortaa_bold"
            android:textColor="@color/_dark"
            android:textSize="18sp"
            />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_change_password"
                android:fontFamily="@font/comfortaa"
                android:textColor="@color/_dark"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_password"
                android:fontFamily="@font/comfortaa"
                android:textColor="@color/_dark"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_change_phone_number"
                android:fontFamily="@font/comfortaa"
                android:textColor="@color/_dark"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_phone"
                android:fontFamily="@font/comfortaa"
                android:textColor="@color/_dark"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_change_avatar_and_nickname"
                android:fontFamily="@font/comfortaa"
                android:textColor="@color/_dark"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_nickname"
                android:fontFamily="@font/comfortaa"
                android:textColor="@color/_dark"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_get_counseling_and_testing_schedule"
                android:fontFamily="@font/comfortaa"
                android:textColor="@color/_dark"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/counseling_testing_info"
                android:fontFamily="@font/comfortaa"
                android:textColor="@color/_dark"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>