<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:paddingHorizontal="20dp"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:background="@drawable/admin_list_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/avatar"
        android:contentDescription="@string/app_name"
        android:id="@+id/avatar"
        />

    <LinearLayout
        android:layout_marginStart="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="15dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_display_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/display_username"
            android:fontFamily="@font/comfortaa_bold"
            android:textColor="@color/_dark"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_position"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:fontFamily="@font/comfortaa"
            android:textColor="@color/_dark"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/tv_other_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:fontFamily="@font/comfortaa"
            android:textColor="@color/_dark"
            android:textSize="13sp"/>

    </LinearLayout>

</LinearLayout>