<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:src="@drawable/avatar"
        android:contentDescription="@string/app_name"
        android:id="@+id/user_pic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/message_ll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/user_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/display_username"
            android:textSize="16sp"
            android:textColor="@color/_dark"
            android:fontFamily="@font/comfortaa"
            android:textStyle="bold"
            android:id="@+id/tv_user_name"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_date"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="12sp"
            android:textColor="@color/dark_text"
            android:fontFamily="@font/comfortaa"
            android:id="@+id/tv_date"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>